test/files/neg/t3006.check
t3006.scala:8: error: type mismatch;
 found   : String("H")
 required: Int
  println(A(3) + "H")
                 ^
t3006.scala:6: warning: Implicit definition should have explicit type (inferred Test.Foo) [quickfixable]
  implicit def aToFoo(x: A) = new Foo(x);
               ^
1 warning
1 error
